dev: Make it work